# ai_assistant_ui

./: .gitignore  README.md  post_install.py  pre_install.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.template
ai_assistant_ui/: auth.ipynb  main.py  paths.py  serve.py
ai_assistant_ui/controllers/: email_controller.py
ai_assistant_ui/models/: action.py  batch.py  gmail.py  mock_gmail.py  state.py
ai_assistant_ui/utils/: logging.py
ai_assistant_ui/views/: card_view.py  list_view.py  shortcut_bar.py  status_bar.py  tab_view.py
docs/: card_view_redesign.md  design_document.md
